<resources>
    <string name="dialog_edit_nickname_title">닉네임 수정</string>
    <string name="dialog_edit_nickname_cancel">취소</string>
    <string name="dialog_edit_nickname_submit">저장</string>
    <string name="emoji_example">🎯</string>
    <string name="archived_habit_onboarding_text">실행 기록이 있거나 짝꿍과 연결된 습관은 홈에서 삭제시 보관함으로 이동돼요.</string>
    <string name="mypage_version_info">버전 정보</string>
    <string name="mypage_terms_of_service">이용 약관</string>
    <string name="mypage_privacy_policy">개인정보처리방침</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdraw">회원탈퇴</string>
    <string name="mypage_archived_habit">습관 보관함</string>
    <string name="archived_habit_title">습관 보관함</string>
    <string name="archived_habit_action_edit">편집</string>
    <string name="archived_habit_action_quit">나가기</string>
    <string name="mate_opened_button_close">닫기</string>
    <string name="mate_opened_icon_close_description">닫기 화살표 아이콘</string>
    <string name="mate_profile_image_description">짝궁 이미지</string>
    <string name="btn_delete">삭제하기</string>
    <string name="archived_habit_empty">아직 보관된 습관이 없어요.</string>
    <string name="mypage_opensource_license">오픈소스 라이선스</string>
</resources>
