<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_white_r18"
        android:paddingHorizontal="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_edit_nickname_title"
            android:textAppearance="@style/Typography.Title1"
            android:textColor="@color/gray_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rect_white_r10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="10"
            android:paddingVertical="13dp"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_rect_gray200_r10"
            android:gravity="center"
            android:text="@string/dialog_edit_nickname_cancel"
            android:textAppearance="@style/Typography.Button2"
            android:textColor="@color/gray_600"
            app:layout_constraintEnd_toStartOf="@id/tv_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nickname" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rect_main_r10"
            android:gravity="center"
            android:text="@string/dialog_edit_nickname_submit"
            android:textAppearance="@style/Typography.Button2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_cancel"
            app:layout_constraintTop_toBottomOf="@id/et_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
