<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.depromeet.threedays.mypage.archived_habit.ArchivedHabitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_archived_habit_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_header_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="73dp" />

        <FrameLayout
            android:id="@+id/fl_archived_habit_onboarding"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_header_end" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_out"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/mypage_archived_habit"
            android:textAppearance="@style/Typography.Heading"
            android:textColor="@color/gray_800"
            app:layout_constraintBottom_toTopOf="@id/gl_header_end"
            app:layout_constraintEnd_toStartOf="@id/tv_action_button"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/gl_header_end"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/archived_habit_action_edit" />

        <ImageView
            android:id="@+id/iv_archived_habit_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="131dp"
            android:src="@drawable/bg_archived_habit_empty"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/gl_header_end" />

        <TextView
            android:id="@+id/tv_archived_habit_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/archived_habit_empty"
            android:textColor="@color/gray_500"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/iv_archived_habit_empty" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_archived_habit_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="iv_archived_habit_empty,tv_archived_habit_empty"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_archived_habit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="14dp"
            android:paddingBottom="22dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_header_end" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rect_gray800_r15"
            android:textAppearance="@style/Typography.Button1"
            android:text="@string/btn_delete"
            android:textColor="@color/white"
            android:gravity="center"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            tools:text="삭제하기"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
