<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/fl_my_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_100"
            tools:context=".MyPageFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <Space
                android:id="@+id/space_header"
                android:layout_width="0dp"
                android:layout_height="73dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="이승승장구"
                android:textAppearance="@style/Typography.Heading"
                android:textColor="@color/gray_800"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/space_header" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="13dp"
                android:background="@drawable/bg_oval_gray200"
                android:padding="4dp"
                android:src="@drawable/ic_edit_gray450"
                app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
                app:layout_constraintStart_toEndOf="@id/tv_nickname"
                app:layout_constraintTop_toTopOf="@id/tv_nickname" />

            <TextView
                android:id="@+id/tv_habit_archived"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_rect_white_r10"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="습관 보관함"
                android:textAppearance="@style/Typography.Body1"
                android:textColor="@color/gray_700"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

            <ImageView
                android:id="@+id/iv_habit_archived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_in"
                app:layout_constraintBottom_toBottomOf="@id/tv_habit_archived"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintTop_toTopOf="@id/tv_habit_archived" />

            <TextView
                android:id="@+id/tv_alarm_configuration"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rect_white_r10"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="알림설정"
                android:textAppearance="@style/Typography.Body1"
                android:textColor="@color/gray_700"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_habit_archived" />

            <Switch
                android:id="@+id/switch_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:gravity="center"
                android:thumb="@drawable/shape_switch_thumb"
                android:track="@drawable/selector_switch_button_track"
                app:layout_constraintBottom_toBottomOf="@id/tv_alarm_configuration"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintTop_toTopOf="@id/tv_alarm_configuration" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rect_white_r10"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_alarm_configuration">

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/mypage_version_info"
                    android:textAppearance="@style/Typography.Body1"
                    android:textColor="@color/gray_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_app_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textAppearance="@style/Typography.Body4"
                    android:textColor="@color/gray_500"
                    app:layout_constraintBottom_toBottomOf="@id/tv_version"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_version"
                    tools:text="1.0.0" />

                <TextView
                    android:id="@+id/tv_terms_of_service"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/mypage_terms_of_service"
                    android:textAppearance="@style/Typography.Body1"
                    android:textColor="@color/gray_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_version" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/mypage_privacy_policy"
                    android:textAppearance="@style/Typography.Body1"
                    android:textColor="@color/gray_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_terms_of_service" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_divider"
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_marginBottom="30dp"
                android:background="@color/gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/mypage_logout"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_500"
                app:layout_constraintBottom_toBottomOf="@id/iv_divider"
                app:layout_constraintEnd_toStartOf="@id/iv_divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/mypage_withdraw"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_500"
                app:layout_constraintBottom_toBottomOf="@id/iv_divider"
                app:layout_constraintStart_toEndOf="@id/iv_divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
